Copy over CV contents (#1)
* Start migrating old CV contents

* Update CSS and HTML

- simple title
- standard fonts (menlo, arial)
- spacing and alignment

* Add interests, publications, references

* Adjust CSS

* Add previous experience, expand BSc section

* Force clean page breaks in PDF rendering

* Further format tweaking (+ orange)

* More fiddling!

* First pass done

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,9 +2,14 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title> {% if page.title %} {{ page.title }} | {% endif %} CV</title>
+  <title> {% if page.title %} {{ page.title }} {% endif %}</title>
   <link href="media/{{ site.style }}-screen.css" type="text/css" rel="stylesheet" media="screen">
-  <link href="media/{{ site.style }}-print.css" type="text/css" rel="stylesheet" media="print">
+  <link href="media/{{ site.style }}-print.css" type="text/css"
+  rel="stylesheet" media="print">
+<style type="text/css">
+  table {page-break-inside: auto;}
+  tr {page-break-inside: avoid; page-break-after: auto;}
+</style>
 </head>
 <body>
   <div id="main">
