--- a/media/kjhealy-print.css
+++ b/media/kjhealy-print.css
@@ -49,37 +49,37 @@ table {
 
 /* end of reset */
 
-
-
 body {
 	font: normal normal 400;
-	font-size: 10pt;
+	font-size: 11pt;
 	line-height: 1.35em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Verdana,sans-serif;
-	/*margin-top: 1em;
-	margin-left: 1em;*/
+	font-family: Arial,sans-serif;
+	text-align: justify;
+	margin-top: 1em;
+	/* margin-left: 1em; */
 }
 
 p {
 	position: relative;
 	left: 28%;
-	margin-bottom: 0.2em;
+	margin-bottom: 0.7em;
 	margin-right: 0;
 	width: 70%;
 }
 
 code {
 	font: normal normal;
-	font-size: 60%;
-	/*line-height: 1em;*/
+	font-size: 80%;
 	font-family: Menlo,monospace,sans-serif;
 	color: #ccc;
+	white-space: pre;
+	top: .2em;
 }
 
 p code {
 	position: absolute;
-	left: -11%;
+	left: -14%;
 }
 
 
@@ -114,7 +114,7 @@ li ul {
 
 h1,h2,h3,h4 {
 	font-weight: 400;
-	font-family: Cousine,Verdana,sans-serif;
+	font-family: Menlo,Arial,sans-serif;
 	width: 65%;
 }
 
@@ -134,32 +134,32 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #a00;
-	margin-top: 2em;
+	color: #d72;
+	margin-top: .5em;
 	position: relative;
 	top: 1.2em;
 	text-align: right;
-	width: 18%;
+	width: 15%;
 }
 
 
 h3 {
 	font-size: 1em;
-	line-height: 2em; 
+	line-height: 1em; 
 	color: #ccc;
 	position: relative;
-	top: 1.6em;
+	top: 1.2em;
 	text-align: right;
-	width: 18%;
+	width: 15%;
 }
 
 a {
-	color: inherit;
-	text-decoration:none
+	color: #ccc;
+	text-decoration:none;
 }
 
 a:hover {
-	color:#39f
+	color:#069
 }
 
 #webaddress {
@@ -176,8 +176,8 @@ a:hover {
 }
 
 em {
-	font-style: normal;
-	color: #2d4e5e 
+	font-style: italic;
+	/* color: #2d4e5e */
 }
 
 strong {
