--- a/media/kjhealy-screen.css
+++ b/media/kjhealy-screen.css
@@ -56,25 +56,27 @@ body {
 	font-size: 80%;
 	line-height: 1.5em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Verdana,sans-serif;
+	font-family: Arial,sans-serif;
 	margin-top: 1em;
 	margin-left: 1em;
+	text-align: justify;
 }
 
 p {
 	position: relative;
 	left: 33%;
-	margin-bottom: 0.7em;
+	margin-bottom: .7em;
 	margin-right: 0;
-	width: 65%;
+	width: 70%;
 }
 
 code {
 	font: normal normal;
-	font-size: 60%;
-	/*line-height: 1em;*/
+	font-size: 80%;
 	font-family: Menlo,monospace,sans-serif;
 	color: #aaa;
+	white-space: pre;
+	top: .2em;
 }
 
 p code {
@@ -114,7 +116,7 @@ li ul {
 
 h1,h2,h3,h4 {
 	font-weight: 400;
-	font-family: Cousine,Verdana,sans-serif;
+	font-family: Menlo,Arial,sans-serif;
 	width: 65%;
 }
 
@@ -134,8 +136,9 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #a00;
-	margin-top: 3em;
+	font-weight: bold;
+	color: #d72;
+	margin-top: 2em;
 	position: relative;
 	top: 1.4em;
 	text-align: right;
@@ -144,20 +147,21 @@ h2 {
 
 h3 {
 	font-size: 1em;
-	line-height: 2em; 
+	line-height: 1em;
 	position: relative;
-	top: 1.7em;
+	top: 1.3em;
 	text-align: right;
 	width: 20%;
+	color: #aaa;
 }
 
 a {
-	color: inherit;
-	/*text-decoration:none*/
+	color: #aaa;
+	text-decoration:none
 }
 
 a:hover {
-	color:#39f
+	color:#069
 }
 
 #webaddress {
@@ -174,7 +178,7 @@ a:hover {
 }
 
 em {
-	font-weight: bold;
+	/* font-weight: bold; */
 	font-style: italic;
 }
 
