--- a/media/kjhealy-screen.css
+++ b/media/kjhealy-screen.css
@@ -32,7 +32,8 @@ body {
 	line-height: 1;
 }
 ol, ul {
-	list-style: none;
+	/* list-style: none; */
+	list-style-position: inside;
 }
 blockquote, q {
 	quotes: none;
